# CheapOVRApp

./: .gitignore  CMakeLists.txt  readme.md  readme_ru.md
glvrtest/: CMakeLists.txt  Findsimpleble.cmake  glvrtest.ggo  main.cpp
vrconf/: CMakeLists.txt  app_assets.qrc  main.cpp  main.ui  mainwindow.cpp  mainwindow.h
vrconf/i18n/: vrconf_en.ts  vrconf_ru.ts
